# finch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Screenshots.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker.yml
app/: auth.py  database.py  main.py  models.py
app/data/: merchant_dictionary.py
app/routers/: analysis.py  auth.py  categories.py  pages.py  rules.py  settings.py  transactions.py
app/services/: analysis.py  anomalies.py  categorizer.py  csv_import.py  logos.py  mcc.py  merchant.py  pay_periods.py
app/static/: app.css  cat-modal-utils.js  charts.js
app/templates/: account.html  analysis.html  base.html  categories.html  login.html  onboarding.html  rules.html  settings.html  setup.html  transactions.html
app/templates/partials/: cat_modal.html
